--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ description: >
 version: 2.5.2
 homepage: https://flyer.chat
 repository: https://github.com/flyerhq/flutter_link_previewer
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -13,7 +14,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_chat_types: ^3.1.2
+  flutter_chat_types: 
+    git: git://github.com/iwalpola/flutter_chat_types.git
   flutter_linkify: ^5.0.2
   html: ^0.15.0
   http: ^0.13.3
